[package]
name = "json-predicate"
version = "0.1.16"
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JSON Predicate lib based on draft-snell-json-07"
repository = "https://github.com/Miaxos/json-predicate"
documentation = "https://docs.rs/json-predicate/latest/json_predicate/"


[dependencies]
derive_builder = "0.20"
fluent-langneg = "0.14"
langtag = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
json-pointer = "0.3.4"
thiserror = "1"
chrono = "0.4.37"
chrono-tz = "0.9"
iso8601 = "0.6"
regex = "1.10"

[dev-dependencies]
insta = "1"                   # A snapshot testing library for Rust
lazy_static = "1.4"            # A macro for declaring lazily evaluated statics in Rust.
